Introducing Ember-Simple-Auth For Token Authentication (#9)
* Authentication using Ember-Simple-Auth.

* Make sure that all requests via Ember-Data have the token appended.

* Tinkering With Models - Roles Can Be Found Under Protected Configuration Screen (#12)

* Playing with models

* #7 README information.

* #11, #13, & #14 Cleaning up and renaming all modules.  Fixing security issues.  Abandoning model folder/namespaces.

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,30 @@
-<section>
+<nav class="border-bottom navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <h1>cppdist-com-emberjs</h1>
+    {{#if session.isAuthenticated}}
+      {{#link-to "protected.index" class="navbar-brand"}}
+        ermahgerd-emberjs-jwt-token
+      {{/link-to}}
+    {{else}}
+      {{#link-to "index" class="navbar-brand"}}
+        ermahgerd-emberjs-jwt-token
+      {{/link-to}}
+    {{/if}}
+
+    <div class="form-inline">
+      {{#if session.isAuthenticated}}
+        <button
+          {{action "logout" session on="click"}}
+          class="btn btn-outline-primary btn-sm" type="button">
+          Logout
+        </button>
+
+      {{else}}
+        {{#link-to "login" class="btn btn-outline-primary btn-sm"}}
+          Login
+        {{/link-to}}
+      {{/if}}
+    </div>
   </div>
-</section>
+</nav>
+
 {{outlet}}
